Apply object fit to home images to centrally position them

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             </ul>
                         </div>
                         <div class="pb-img">
-                            <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells">
+                            <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells" class="benefits-img">
                         </div>
                     </div>
                     <div class="mental-benefits">
@@ -88,7 +88,7 @@
                         </div>
                         <div class="mb-img">
                             <img src="assets/images/woman_drinking_water_next_to_a_bike.webp"
-                                alt="woman drinking water next to a bike">
+                                alt="woman drinking water next to a bike" class="benefits-img">
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                             </ul>
                         </div>
                         <div class="pb-img">
-                            <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad">
+                            <img src="assets/images/bowl_of_salad.webp" alt="a bowl of salad" class="benefits-img">
                         </div>
                     </div>
                     <div class="mental-benefits">
@@ -129,7 +129,7 @@
                             </ul>
                         </div>
                         <div class="mb-img">
-                            <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal">
+                            <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal" class="benefits-img">
                         </div>
                     </div>
                 </div>
