Increased the font size of social networks icons and spaced them

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                             </ul>
                         </div>
                         <div class="pb-img">
-                            <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells" class="benefits-img">
+                            <img src="assets/images/man_carrying_dumbbells.webp" alt="seated man carrying dumbbells"
+                                class="benefits-img">
                         </div>
                     </div>
                     <div class="mental-benefits">
@@ -129,7 +130,8 @@
                             </ul>
                         </div>
                         <div class="mb-img">
-                            <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal" class="benefits-img">
+                            <img src="assets/images/lady_preparing_a_meal.webp" alt="a lady preparing a healthy meal"
+                                class="benefits-img">
                         </div>
                     </div>
                 </div>
@@ -144,8 +146,10 @@
             <h6 class="hide">Hidden</h6>
             <p>Follow Us</p>
             <ul class="social-networks">
-                <li><a href="https://x.com/" target="_blank" rel="noopener"
-                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
+                <li>
+                    <a href="https://x.com/" target="_blank" rel="noopener"
+                        aria-label="Visit our X page (opens in a new tab)"><i class="fa-brands fa-twitter"></i>
+                    </a>
                 </li>
                 <li><a href="https://wwww.facebook.com/" target="_blank" rel="noopener"
                         aria-label="Visit our Facebook page (opens in a new tab)"><i
