Link responsive.html page to sign-up page

--- a/sign-up.html
+++ b/sign-up.html
@@ -43,7 +43,7 @@
     <!--Main Content-->
     <main>
         <section class="signup-page">
-            <form action="sign-up.html" method="GET" class="signup-form">
+            <form action="responsive.html" method="GET" class="signup-form">
                 <h2>Gym Membership Form</h2>
                 <h3>Start your Fit Lifestyle today!</h3>
                 <hr>
