Add responsive page content

--- a/responsive.html
+++ b/responsive.html
@@ -42,7 +42,15 @@
 
     <!--Main Content-->
     <main>      
-          <div>Thank you.</div> 
+          <div>
+            <img src="assets/images/thank_you.webp" alt="Thank you image." width="500px">
+            <br>
+          <p>Thank you for signing up</p>
+          <br>
+          <p>We are looking forward to start together your Fit Lifestyle!</p>
+          <br>
+          <a href="index.html">Return to home page</a>
+        </div>
     </main>
 
     <!--Footer-->
