Style responsive content

--- a/responsive.html
+++ b/responsive.html
@@ -42,7 +42,7 @@
 
     <!--Main Content-->
     <main>      
-          <div>
+          <div class="responsive-content">
             <img src="assets/images/thank_you.webp" alt="Thank you image." width="500px">
             <br>
           <p>Thank you for signing up</p>
