Add classes to all weekdays

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -59,7 +59,7 @@
                 <br>
             </div>
             <div class="weekdays">
-                <div>
+                <div class="monday">
                     <h3>Monday:</h3>
                     <h4>Cardio</h4>
                     <p>Aim for at least 30 minutes of aerobic activity, such as biking, jogging, running, and walking.
@@ -78,7 +78,7 @@
                     <br>
                 </div>
                 <hr>
-                <div>
+                <div class="tuesday">
                     <h3>Tuesday:</h3>
                     <h4>Lower body</h4>
                     <p>With four compound lifts, your first muscle-strengthening session of the week will target your
@@ -125,7 +125,7 @@
                     </video>
                 </div>
                 <hr>
-                <div>
+                <div class="wednesday">
                     <h3>Wednesday:</h3>
                     <h4>Upper Body and Core</h4>
                     <p>Your legs, which are likely feeling sore, will get a break since you'll be focusing on your arms
@@ -163,7 +163,7 @@
                     <br>
                 </div>
                 <hr>
-                <div>
+                <div class="thursday">
                     <h3>Thursday:</h3>
                     <h4>Active Rest anf Recovery</h4>
                     <p>Give your body a chance to recover and recharge. Muscle-strengthening activities create tiny
@@ -176,7 +176,7 @@
                     <br>
                 </div>
                 <hr>
-                <div>
+                <div class="friday">
                     <h3>Friday:</h3>
                     <h4>Lower Body With a Focus on Glutes</h4>
                     <p>This lower body session will focus on your glutes. Warm up your glutes with five resistance band
@@ -188,7 +188,7 @@
                     <br>
                 </div>
                 <hr>
-                <div>
+                <div class="saturday">
                     <h3>Saturday:</h3>
                     <h4>Upper Body</h4>
                     <p>Focus on your back and shoulders for your final workout of the week. You'll want to fire up your
@@ -233,7 +233,7 @@
                     </video>
                 </div>
                 <hr>
-                <div>
+                <div class="sunday">
                     <h3>Sunday:</h3>
                     <h4>Rest and Recovery Day</h4>
                     <p>Celebrate your week of hard work by giving your body time to recover. You can try yoga or
