--- a/workout-routines.html
+++ b/workout-routines.html
@@ -109,20 +109,22 @@
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
                     <br>
-                    <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video><br>
-                    <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
+                    <div class="tuesday-videos">
+                        <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
+                            <p>Your browser doesn't support HTML5 video.</p>
+                        </video><br>
+                        <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
+                            <p>Your browser doesn't support HTML5 video.</p>
+                        </video>
+                        <br>
+                        <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
+                            <p>Your browser doesn't support HTML5 video.</p>
+                        </video>
+                        <br>
+                        <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
+                            <p>Your browser doesn't support HTML5 video.</p>
+                        </video>
+                    </div>
                 </div>
                 <hr>
                 <div class="wednesday">
@@ -244,7 +246,6 @@
                         matters most is that you listen to your body.</p>
                     <br>
                 </div>
-                <hr>
             </div>
         </Section>
     </main>
@@ -253,7 +254,7 @@
     <footer>
         <p>"If it doesn't challenge you, it doesn't change you." <strong>FRED_DEVITO</strong></p>
         <section class="social-media">
-            <h6 class="hide">Hidden</h6>
+            <h5 class="hide">Hidden</h5>
             <p>Follow Us</p>
             <ul class="social-networks">
                 <li><a href="https://x.com/" target="_blank" rel="noopener"
