--- a/responsive.html
+++ b/responsive.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="exercise, meal preps, gym wokouts, home workouts.">
     <title>Fit Lifestyle</title>
     <!-- Favicon -->
-    <link rel="icon" href="assets/favicon/favicon.png">
+    <link rel="icon" href="assets/favicon/favicon.webp">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -20,7 +20,7 @@
     <header>
         <div class="logo">
             <a href="index.html">
-                <img src="assets/favicon/favicon.png" alt="logo">
+                <img src="assets/favicon/favicon.webp" alt="logo">
             </a>
             <a href="index.html">
                 <h1>Fit Lifestyle</h1>
