Add all videos workout vid class and class describing the workout

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -57,6 +57,7 @@
                     Jersey, and Sharon Gam, PhD, a certified personal trainer and health coach, to help you figure out
                     your goals and get started.</p>
                 <br>
+                <hr>
             </div>
             <div class="weekdays">
                 <div class="monday">
@@ -110,20 +111,32 @@
                     </ul>
                     <br>
                     <div class="tuesday-videos">
-                        <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
-                            <p>Your browser doesn't support HTML5 video.</p>
-                        </video><br>
-                        <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
-                            <p>Your browser doesn't support HTML5 video.</p>
-                        </video>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video><br>
+                            <p>Deadlifts</p>
+                        </div>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Hip thrusts</p>
+                        </div>
                         <br>
-                        <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
-                            <p>Your browser doesn't support HTML5 video.</p>
-                        </video>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Lunges</p>
+                        </div>
                         <br>
-                        <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
-                            <p>Your browser doesn't support HTML5 video.</p>
-                        </video>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Squats</p>
+                        </div>
                     </div>
                 </div>
                 <hr>
@@ -146,17 +159,28 @@
                             hips. Slide your butt off the chair and lower yourself so your elbows are bent at a 45- or
                             90-degree angle. Push yourself back to the starting position.</li>
                     </ul>
-                    <video src="assets/videos/Wednesday/bicep-curl.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Wednesday/chest-press.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Wednesday/tricep-dip.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
+                    <div class="wednesday-videos">
+                        <div class="workout-vid">
+                            <video src="assets/videos/Wednesday/bicep-curl.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Bicep Curl</p>
+                        </div>
+                        <br>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Wednesday/chest-press.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Chest Press</p>
+                        </div>
+                        <br>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Wednesday/tricep-dip.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Chest Press</p>
+                        </div>
+                    </div>
                     <br>
                     <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
                         Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
@@ -222,17 +246,29 @@
                             starting position.
                         </li>
                     </ul>
-                    <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Saturday/lat-pull-down.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
-                    <br>
-                    <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
-                        <p>Your browser doesn't support HTML5 video.</p>
-                    </video>
+                    <div class="saturday-videos">
+                        <div class="workout-vid">
+                            <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls autoplay muted
+                                loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Dumbbell Single arm row</p>
+                        </div>
+                        <br>
+                        <div class="workout-vid">
+                            <video src="assets/videos/Saturday/lat-pull-down.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Lat Pull down</p>
+                        </div>
+                        <br>
+                        <div>
+                            <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>lateral raise</p>
+                        </div>
+                    </div>
                 </div>
                 <hr>
                 <div class="sunday">
