Remove all br tags

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -47,16 +47,13 @@
                 <h2>Effective weekly workout routine</h2>
                 <p>You'll want to find a well-balanced workout routine you can stick to to reap the benefits of physical
                     activity.</p>
-                <br>
                 <p>The Centers for Disease Control and Prevention (CDC) advises at least 150 minutes of
                     moderate-intensity physical activity per week, which is 30 minutes per day, five days per week. The
                     CDC also recommends two days of muscle-strengthening activities.</p>
-                <br>
                 <p>Your workout routine depends on your goals, such as building muscle and gaining strength. Here's a
                     sample weekly workout schedule by Jacklyn Romano, CPT, a certified physical therapist based in New
                     Jersey, and Sharon Gam, PhD, a certified personal trainer and health coach, to help you figure out
                     your goals and get started.</p>
-                <br>
                 <hr>
             </div>
             <div class="weekdays">
@@ -67,16 +64,13 @@
                         The CDC recommends that you aim for moderate intensity, meaning a heart rate between 64% and 76%
                         of your maximum heart rate.You'll be able to hold a conversation while exercising. Vigorous
                         intensity, in contrast, means that you can only say a few words without pausing.</p>
-                    <br>
                     <p>A good rule of thumb for finding your maximum heart rate is subtracting your age from 220. Your
                         maximum heart rate would be 175 beats per minute (bpm), for example, if you are 40. You'll aim
                         for a heart rate between 112 bpm and 133 bpm.</p>
-                    <br>
                     <p>Steady-state cardio (endurance workouts) improve the stamina of your heart and lungs and reduce
                         the risk of diabetes, heart disease, and stroke. Your body learns to move oxygen and nutrients
                         into your muscles more efficiently while transporting waste out.As a result, those exercises
                         will become easier over time, so you'll want to</p>
-                    <br>
                 </div>
                 <hr>
                 <div class="tuesday">
@@ -86,10 +80,8 @@
                         lower body, including your hamstrings, glutes, and quads. Compound lifts are exercises that use
                         multiple muscle groups. A deadlift, for example, works your lower body and your arm and core
                         muscles.</p>
-                    <br>
                     <p>Do 10 reps for three sets, with a minute of rest between each set, of the following exercises:
                     </p>
-                    <br>
                     <ul>
                         <li><strong>Deadlifts:</strong> Place your feet shoulder-width apart, push your butt back, bend
                             your knees
@@ -109,12 +101,11 @@
                             shoulder-width apart
                             and your feet flat on the floor. Push back up to standing.</li>
                     </ul>
-                    <br>
                     <div class="tuesday-videos">
                         <div class="workout-vid">
                             <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
-                            </video><br>
+                            </video>
                             <p>Deadlifts</p>
                         </div>
                         <div class="workout-vid">
@@ -123,14 +114,12 @@
                             </video>
                             <p>Hip thrusts</p>
                         </div>
-                        <br>
                         <div class="workout-vid">
                             <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lunges</p>
                         </div>
-                        <br>
                         <div class="workout-vid">
                             <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
@@ -145,7 +134,6 @@
                     <h4>Upper Body and Core</h4>
                     <p>Your legs, which are likely feeling sore, will get a break since you'll be focusing on your arms
                         today. You'll target your biceps, triceps, and chest muscles with these moves:</p>
-                    <br>
                     <ul>
                         <li><strong>Bicep curl: </strong> Hold a dumbbell in each hand or grasp a barbell with both
                             hands. Let your elbows rest at your sides with your forearms extended out parallel to the
@@ -166,14 +154,12 @@
                             </video>
                             <p>Bicep Curl</p>
                         </div>
-                        <br>
                         <div class="workout-vid">
                             <video src="assets/videos/Wednesday/chest-press.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
-                        <br>
                         <div class="workout-vid">
                             <video src="assets/videos/Wednesday/tricep-dip.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
@@ -181,12 +167,10 @@
                             <p>Chest Press</p>
                         </div>
                     </div>
-                    <br>
                     <p>Perform 10 reps of each exercise for three sets with one minute of rest in between each set.
                         Finish this session with a quick core circuit. Pick some of your core moves—such as crunches,
                         planks, and Russian twists—and do each one for 30 seconds with 10–15 seconds off. Repeat the
                         exercises until you hit 10–15 minutes.</p>
-                    <br>
                 </div>
                 <hr>
                 <div class="thursday">
@@ -199,7 +183,6 @@
                     <br>
                     <p>You may get some form of movement in, even on off days, if you are not too sore or tired. Active
                         rest might include walking and stretching, which relieves post-workout muscle tightness.</p>
-                    <br>
                 </div>
                 <hr>
                 <div class="friday">
@@ -211,7 +194,6 @@
                     <p>You'll move on to weighted exercises once you activate your glutes. Romano recommended doing 10
                         reps for three sets of hinge movements, including deadlifts, hip thrusts, and single-legged hip
                         thrusts. Those exercises target your glutes and hamstrings.</p>
-                    <br>
                 </div>
                 <hr>
                 <div class="saturday">
@@ -221,10 +203,8 @@
                         muscles before jumping into the weights. Try doing three sets of 10 reps each of push-ups and
                         pull-ups. You can modify with incline push-ups and assisted pull-ups until you build more
                         strength.</p>
-                    <br>
                     <p>You'll then complete five weighted exercises for 10 reps and three sets. Those exercises include:
                     </p>
-                    <br>
                     <ul>
                         <li><strong>Dumbbell single-arm row: </strong> Place one hand under your shoulder, arm straight,
                             on a bench. Rest your corresponding knee on the bench, keeping your other leg out to the
@@ -254,14 +234,12 @@
                             </video>
                             <p>Dumbbell Single arm row</p>
                         </div>
-                        <br>
                         <div class="workout-vid">
                             <video src="assets/videos/Saturday/lat-pull-down.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lat Pull down</p>
                         </div>
-                        <br>
                         <div>
                             <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
@@ -276,11 +254,9 @@
                     <h4>Rest and Recovery Day</h4>
                     <p>Celebrate your week of hard work by giving your body time to recover. You can try yoga or
                         stretching to prevent your muscles from getting too stiff and sore.</p>
-                    <br>
                     <p>It's OK to take a complete rest day, too. Both active and relaxed days off have a place in our
                         weekly routine, whether that's reading a book on the couch or catching up on Netflix. What
                         matters most is that you listen to your body.</p>
-                    <br>
                 </div>
             </div>
         </Section>
