Styled Saturday leteral raise video

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -240,11 +240,11 @@
                             </video>
                             <p>Lat Pull down</p>
                         </div>
-                        <div>
+                        <div class="workout-vid">
                             <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
-                            <p>lateral raise</p>
+                            <p>Lateral raise</p>
                         </div>
                     </div>
                 </div>
