Spelling correction in Thursday workout activity

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -175,7 +175,7 @@
                 <hr>
                 <div class="thursday">
                     <h3>Thursday:</h3>
-                    <h4>Active Rest anf Recovery</h4>
+                    <h4>Active Rest and Recovery</h4>
                     <p>Give your body a chance to recover and recharge. Muscle-strengthening activities create tiny
                         microtears in your muscle fibers, leaving your muscles achy and sore. That may sound alarming,
                         but it actually means your muscles will grow back stronger than before. Not allowing your
