Remove auto play from existing videos as this slowed web performance

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -103,25 +103,25 @@
                     </ul>
                     <div class="tuesday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/Tuesday/deadlift.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Tuesday/deadlift.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Deadlifts</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Tuesday/hip-thrusts.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Hip thrusts</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Tuesday/lunges.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Tuesday/lunges.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lunges</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Tuesday/squats.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Tuesday/squats.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Squats</p>
@@ -149,19 +149,19 @@
                     </ul>
                     <div class="wednesday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/Wednesday/bicep-curl.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Wednesday/bicep-curl.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Bicep Curl</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Wednesday/chest-press.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Wednesday/chest-press.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Wednesday/tricep-dip.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Wednesday/tricep-dip.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Chest Press</p>
@@ -228,20 +228,20 @@
                     </ul>
                     <div class="saturday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls autoplay muted
+                            <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls muted
                                 loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Dumbbell Single arm row</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Saturday/lat-pull-down.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Saturday/lat-pull-down.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lat Pull down</p>
                         </div>
                         <div class="workout-vid">
-                            <video src="assets/videos/Saturday/lateral-raise.mp4" controls autoplay muted loop>
+                            <video src="assets/videos/Saturday/lateral-raise.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Lateral raise</p>
