Add friday workout video

--- a/workout-routines.html
+++ b/workout-routines.html
@@ -194,6 +194,14 @@
                     <p>You'll move on to weighted exercises once you activate your glutes. Romano recommended doing 10
                         reps for three sets of hinge movements, including deadlifts, hip thrusts, and single-legged hip
                         thrusts. Those exercises target your glutes and hamstrings.</p>
+                    <div class="friday-videos">
+                        <div class="workout-vid">
+                            <video src="assets/videos/Friday/resistant-band_wo-legs.mp4" controls autoplay muted loop>
+                                <p>Your browser doesn't support HTML5 video.</p>
+                            </video>
+                            <p>Leg strecth with resistance band</p>
+                        </div>
+                    </div>
                 </div>
                 <hr>
                 <div class="saturday">
@@ -228,8 +236,7 @@
                     </ul>
                     <div class="saturday-videos">
                         <div class="workout-vid">
-                            <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls muted
-                                loop>
+                            <video src="assets/videos/Saturday/dumbbell-single-arm-row.mp4" controls muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
                             <p>Dumbbell Single arm row</p>
