--- a/workout-routines.html
+++ b/workout-routines.html
@@ -199,7 +199,7 @@
                             <video src="assets/videos/Friday/resistant-band_wo-legs.mp4" controls autoplay muted loop>
                                 <p>Your browser doesn't support HTML5 video.</p>
                             </video>
-                            <p>Leg strecth with resistance band</p>
+                            <p>Leg strecth with resistance band and Squats</p>
                         </div>
                     </div>
                 </div>
